# Orginal-Marlin

./: Cargo.toml  README.md
src/: data_structures.rs  error.rs  lib.rs  rng.rs  test.rs
src/ahp/: constraint_systems.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
